# The-CRM-Digital-FTE-Factory-Final-Hackathon-5

./: ABORT_ERROR_FIX.md  ACTION_PLAN.md  API_CLIENT_ERROR_FIX.md  API_KEY_FIX.md  COMPLETION_REPORT.md  CRITICAL_FIX_SQL_AND_NETWORK.md  DELIVERY_FLOW_DIAGRAM.md  DEPLOYMENT_CHECKLIST.md  DOUBLE_SLASH_FIX.md  EMAIL_DELIVERY_FIX.md  EMAIL_FINAL_SOLUTION.md  EMAIL_SENDING_FIX.md  EMAIL_WHATSAPP_SENDING_FIX.md  FINAL_SUMMARY.md  FRONTEND_DEPLOYMENT_TROUBLESHOOTING.md  FRONTEND_RENDER_CONNECTION_SOLVED.md  GEMINI_MODEL_UPDATE.md  GMAIL_AND_WEBFORM_STATUS.md  GMAIL_CREDENTIALS_FIX.md  GMAIL_CREDENTIALS_RENDER.md  GMAIL_PRECONDITION_FIX.md  GMAIL_SETUP.md  IMPLEMENTATION_STATUS.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PROCESSING_TIMEOUT_EXPLAINED.md  QUICK_FIX_SUMMARY.md  QUICK_REFERENCE.md  README.md  SENDGRID_SOLUTION.md  UNBOUNDLOCALERROR_FIX.md  WHATSAPP_IMPLEMENTATION_COMPLETE.md  WHATSAPP_QUICK_ANSWERS.md  WHATSAPP_TESTING_GUIDE.md  WHATSAPP_TROUBLESHOOTING.md  docker-compose.yml
backend/: .gitignore  API_ENDPOINTS.md  Dockerfile  GMAIL_API_SETUP.md  IMAP_POLLING_SETUP.md  QUICK_START.md  README.md  WHATSAPP_MCP_INTEGRATION_SUMMARY.md  WHATSAPP_MCP_SETUP.md  pyproject.toml  start_all.bat  start_whatsapp_all.bat  test_agent.py  test_agent_real.py  test_agent_runner.py  test_api.py  test_db.py  test_email_sending.py  test_gmail_api.py  test_gmail_integration.py  test_gmail_simple.py  test_neon.py  test_quick_answers.py  test_whatsapp_flow.py  test_whatsapp_mcp.py
backend/migrations/: add_whatsapp_only_to_tickets.sql  run_migration.py
backend/src/: config.py
(+84 files in other folders)
